--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2c5fe343-e44f-45b3-a6bd-9f48f1cfff15"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
