--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.0.1",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "jwt-decode": "^4.0.0",
     "ngx-loading": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
