--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "ngx-loading": "^7.0.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1102.9",
     "@angular/cli": "~11.2.9",
     "@angular/compiler-cli": "~11.2.10",
+    "@types/bootstrap": "^5.2.10",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
