--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
